--- a/src/styles/rete.css
+++ b/src/styles/rete.css
@@ -1,13 +1,17 @@
 .rete-background {
     background-color: #141416;
     background-image:
-        linear-gradient(#2a2a2e 1px, transparent 1px),
-        linear-gradient(90deg, #2a2a2e 1px, transparent 1px);
-    background-size: 40px 40px;
+        linear-gradient(var(--grid-color, #2a2a2e) 1px, transparent 1px),
+        linear-gradient(90deg, var(--grid-color, #2a2a2e) 1px, transparent 1px);
+    background-size: var(--grid-size, 40px) var(--grid-size, 40px);
     width: 100%;
     height: 100%;
     position: relative;
     overflow: hidden;
+}
+
+.rete-background.grid-hidden {
+    background-image: none;
 }
 
 .rete-area svg.connections {
